# pydata-paris-2025

./: README.md  index.md  jupyter-lite.json  jupyter_lite_config.json  overrides.json  pyproject.toml
.github/workflows/: deploy.yml
notebooks/: demo.ipynb  fractals.ipynb
