[project]
name = "pydata-paris-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyterlab>=4.5.0a3",
    "jupyterlab-browser-ai>=0.3.0",
    "jupyterlite>=0.7.0a5",
    "jupyterlite-ai>=0.9.0a0",
    "jupyterlite-core>=0.7.0a5",
    "jupyterlite-pyodide-kernel>=0.7.0a2",
]
